# fantasy-city-gen

./: CMakeLists.txt  README.md
libs/imgui/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  system.cpp  system.h  window.cpp  window.h
src/core/: CMakeLists.txt  map.cpp  map.h  point.cpp  point.h  triangle.h
src/core/include/: map.h  point.h  window.h
src/core/src/: map.cpp  point.cpp  triangle.cpp  window.cpp
src/ecs/: component.h  entity.h
src/graphics/: point.cpp  point.h  window.cpp  window.h
test/: CMakeLists.txt  run_test.cpp  test_map.cpp  test_point.cpp
